welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:4: error: reassignment to val
      monkeyTrouble=true
                   ^monkeyTrouble:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if (bSmile){
    ^monkeyTrouble:6: error: Boolean does not take parameters
  }else (!aSmile){
                 ^